@@ -10,12 +10,12 @@ public class BuilderFactoryTest {
   @Test
   public void buildDouble() {
     Double build = BuilderFactory.DOUBLE.build("1.0".getBytes());
-    assertEquals(new Double(1.0), build);
+    assertEquals(Double.valueOf(1.0), build);
     build = BuilderFactory.DOUBLE.build("inf".getBytes());
-    assertEquals(new Double(Double.POSITIVE_INFINITY), build);
+    assertEquals(Double.valueOf(Double.POSITIVE_INFINITY), build);
     build = BuilderFactory.DOUBLE.build("+inf".getBytes());
-    assertEquals(new Double(Double.POSITIVE_INFINITY), build);
+    assertEquals(Double.valueOf(Double.POSITIVE_INFINITY), build);
     build = BuilderFactory.DOUBLE.build("-inf".getBytes());
-    assertEquals(new Double(Double.NEGATIVE_INFINITY), build);
+    assertEquals(Double.valueOf(Double.NEGATIVE_INFINITY), build);
   }
 }
